Fail2ban: Fix in enabled status of SSH jail.

--- a/playbooks/roles/fail2ban/templates/RedHat/jail6.conf.j2
+++ b/playbooks/roles/fail2ban/templates/RedHat/jail6.conf.j2
@@ -226,7 +226,7 @@ action = %(action_)s
 port    = ssh
 logpath = %(sshd_log)s
 backend = %(sshd_backend)s
-
+enabled = true
 
 [sshd-ddos]
 # This jail corresponds to the standard configuration in Fail2ban.
