--- a/playbooks/roles/vpn/templates/Debian/openvpn.server.conf.j2
+++ b/playbooks/roles/vpn/templates/Debian/openvpn.server.conf.j2
@@ -29,7 +29,7 @@ local 127.0.0.1
 # on the same machine, use a different port
 # number for each one.  You will need to
 # open up this port on your firewall.
-port 1194
+port {{ openvpn_port }}
 
 # TCP or UDP server?
 ;proto tcp
